kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "threetreeslight.com"
  - port:
      number: 80
      name: https
      protocol: HTTPS
    hosts:
    - "threetreeslight.com"
