kubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
spec:
  hosts:
  - blog
  gateways:
  - blog
  http:
  - route:
    - destination:
        host: blog
        subset: v1
        port:
          number: 8080
